# lif-sim

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
lif_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lif_sim/src/: lif.py  model.py  plotting.py
